--- a/all-page-content-should-be-contained-by-landmarks.html
+++ b/all-page-content-should-be-contained-by-landmarks.html
@@ -37,10 +37,9 @@
     </script>
 </head>
 <body>
-    <h1>All page content should be contained by landmarks</h1>
 
     <label for="page-selector">Select a Page:</label>
-<select id="page-selector" name="pages">
+<select id="page-selector" name="pages" onchange="location = this.value;">
     <option value="accesskey-attribute-value-should-be-unique.html">1. Accesskey Attribute Value Should Be Unique</option>
     <option value="active-area-elements-must-have-alt-text.html">2. Active Area Elements Must Have Alt Text</option>
     <option value="active-area-elements-must-have-alternate-text.html">3. Active Area Elements Must Have Alternate Text</option>
@@ -134,8 +133,9 @@
     <option value="video-or-audio-elements-must-not-play-automatically.html">91. Video Or Audio Elements Must Not Play Automatically</option>
     <option value="zooming-and-scaling-must-not-be-disabled.html">92. Zooming And Scaling Must Not Be Disabled</option>
 </select>
+<br><br>
 
-    
+    <h1>All page content should be contained by landmarks</h1>
     <header role="banner">
         <h2>Site Header</h2>
     </header>
