--- a/all-page-content-should-be-contained-by-landmarks.html
+++ b/all-page-content-should-be-contained-by-landmarks.html
@@ -40,6 +40,7 @@
 
     <label for="page-selector">Select a Page:</label>
     <select id="page-selector" name="pages" onchange="location = this.value;">
+        <option value="index.html">Choose page</option>
         <option value="index.html">1. Index</option>
         <option value="accesskey-attribute-value-should-be-unique.html">2. Accesskey Attribute Value Should Be Unique</option>
         <option value="active-area-elements-must-have-alt-text.html">3. Active Area Elements Must Have Alt Text</option>
@@ -133,6 +134,7 @@
         <option value="zooming-and-scaling-must-not-be-disabled.html">91. Zooming And Scaling Must Not Be Disabled</option>
     </select>
     <br><br>
+    
     
 
     <h1>All page content should be contained by landmarks</h1>
