Updated dropdown menus and other changes

--- a/blink-elements-are-deprecated-and-must-not-be-used.html
+++ b/blink-elements-are-deprecated-and-must-not-be-used.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;blink&gt; elements are deprecated and must not be used</h1>
+    <h1>blink&gt; elements are deprecated and must not be used</h1>
     <blink>This text is blinking and should not be used.</blink>
     <p>Note: This is a bad example where the deprecated <blink> element is used.</p>
 </body>
