--- a/dt-and-dd-elements-must-be-contained-by-a-dl.html
+++ b/dt-and-dd-elements-must-be-contained-by-a-dl.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;dt&gt; and &lt;dd&gt; elements must be contained by a &lt;dl&gt;</h1>
+    <h1>dt&gt; and &lt;dd&gt; elements must be contained by a &lt;dl&gt;</h1>
     <div>
         <dt>Term 1</dt>
         <dd>Definition 1</dd>
