--- a/elements-must-only-directly-contain-properly-ordered-and-groups-script-template-or-div-elements.html
+++ b/elements-must-only-directly-contain-properly-ordered-and-groups-script-template-or-div-elements.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;dl&gt; elements must only directly contain properly-ordered &lt;dt&gt; and &lt;dd&gt; groups, &lt;script&gt;, &lt;template&gt; or &lt;div&gt; elements</h1>
+    <h1>dl&gt; elements must only directly contain properly-ordered &lt;dt&gt; and &lt;dd&gt; groups, &lt;script&gt;, &lt;template&gt; or &lt;div&gt; elements</h1>
     <dl>
         <dt>Term 1</dt>
         <p>Improper element within dl</p>
