--- a/html-element-must-have-a-lang-attribute.html
+++ b/html-element-must-have-a-lang-attribute.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;html&gt; element must have a lang attribute</h1>
+    <h1>html&gt; element must have a lang attribute</h1>
     <p>Note: This is a bad example where the &lt;html&gt; element does not have a lang attribute.</p>
 </body>
 </html>
