--- a/html-element-must-have-a-valid-value-for-the-lang-attribute.html
+++ b/html-element-must-have-a-valid-value-for-the-lang-attribute.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;html&gt; element must have a valid value for the lang attribute</h1>
+    <h1>html&gt; element must have a valid value for the lang attribute</h1>
     <p>This document either lacks a lang attribute or uses an invalid value for the lang attribute, breaking the accessibility requirement.</p>
 </body>
 </html>
