--- a/li-elements-must-be-contained-in-a-ul-or-ol.html
+++ b/li-elements-must-be-contained-in-a-ul-or-ol.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;li&gt; elements must be contained in a &lt;ul&gt; or &lt;ol&gt;</h1>
+    <h1>li elements must be contained in a &lt;ul&gt; or &lt;ol&gt;</h1>
     <li>This is an incorrectly used list item.</li>
     <div>
         <li>This is another incorrectly used list item.</li>
