--- a/marquee-elements-are-deprecated-and-must-not-be-used.html
+++ b/marquee-elements-are-deprecated-and-must-not-be-used.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;marquee&gt; elements are deprecated and must not be used</h1>
+    <h1>marquee&gt; elements are deprecated and must not be used</h1>
     
     <marquee behavior="scroll" direction="left">This is a scrolling text using the deprecated marquee element.</marquee>
     <marquee behavior="alternate">Another example of a marquee element that should not be used.</marquee>
