--- a/object-elements-must-have-alternate-text.html
+++ b/object-elements-must-have-alternate-text.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;object&gt; elements must have alternate text</h1>
+    <h1>object&gt; elements must have alternate text</h1>
     <object data="example.swf" type="application/x-shockwave-flash"></object>
     <p>This document includes an object element without a text alternative, breaking the accessibility requirement.</p>
 </body>
