--- a/role-img-elements-must-have-an-alternative-text.html
+++ b/role-img-elements-must-have-an-alternative-text.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>[role="img"] elements must have an alternative text</h1>
+    <h1>role="img"] elements must have an alternative text</h1>
     
     <div role="img" style="width: 100px; height: 100px; background: url('image1.jpg');"></div>
     <span role="img" style="width: 100px; height: 100px; display: inline-block; background: url('image2.jpg');"></span>
