--- a/svg-elements-with-an-img-role-must-have-an-alternative-text.html
+++ b/svg-elements-with-an-img-role-must-have-an-alternative-text.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;svg&gt; elements with an img role must have an alternative text</h1>
+    <h1>svg&gt; elements with an img role must have an alternative text</h1>
     <svg id="example1" role="img"></svg> <!-- No title child -->
     <svg id="example2" role="img"><title></title></svg> <!-- Empty title child -->
     <svg id="example3" role="img"><circle><title>Time II: Party</title></circle></svg> <!-- Title grandchild -->
