--- a/ul-and-ol-must-only-directly-contain-li-script-or-template-elements.html
+++ b/ul-and-ol-must-only-directly-contain-li-script-or-template-elements.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;ul&gt; and &lt;ol&gt; must only directly contain &lt;li&gt;, &lt;script&gt; or &lt;template&gt; elements</h1>
+    <h1>ul&gt; and &lt;ol&gt; must only directly contain &lt;li&gt;, &lt;script&gt; or &lt;template&gt; elements</h1>
     <ul>
         <li>List item 1</li>
         <div>Incorrect element within ul</div>
