--- a/video-or-audio-elements-must-not-play-automatically.html
+++ b/video-or-audio-elements-must-not-play-automatically.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;video&gt; or &lt;audio&gt; elements must not play automatically</h1>
+    <h1>video&gt; or &lt;audio&gt; elements must not play automatically</h1>
     <audio src="example.mp3" autoplay></audio>
     <video src="example.mp4" autoplay></video>
     <p>Note: This is a bad example where audio and video elements autoplay without user control mechanisms.</p>
