--- a/video-elements-must-have-captions.html
+++ b/video-elements-must-have-captions.html
@@ -135,7 +135,7 @@
     </select>
     <br><br>
  
-    <h1>&lt;video&gt; elements must have captions</h1>
+    <h1>video&gt; elements must have captions</h1>
     <video controls>
         <source src="sample.mp4" type="video/mp4">
         Your browser does not support the video tag.
