--- a/html-element-must-have-a-valid-value-for-the-lang-attribute.html
+++ b/html-element-must-have-a-valid-value-for-the-lang-attribute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&lt;html&gt; element must have a valid value for the lang attribute</title>
+    <title>html&gt; element must have a valid value for the lang attribute</title>
     <script>
         (function(w,d,s,a,m,t) {
             a = d.createElement(s);m = d.getElementsByTagName(s)[0];a.defer = true;a.fetchpriority='high';a.id = 'auditor_app';a.dataset.cfasync = 'false';a.src = 'https://stage-auditor.sitelint.com/auditor.bundle.js?tokenId=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e';
