--- a/li-elements-must-be-contained-in-a-ul-or-ol.html
+++ b/li-elements-must-be-contained-in-a-ul-or-ol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&lt;li&gt; elements must be contained in a &lt;ul&gt; or &lt;ol&gt;</title>
+    <title>li elements must be contained in a &lt;ul&gt; or &lt;ol&gt;</title>
     <script>
         (function(w,d,s,a,m,t) {
             a = d.createElement(s);m = d.getElementsByTagName(s)[0];a.defer = true;a.fetchpriority='high';a.id = 'auditor_app';a.dataset.cfasync = 'false';a.src = 'https://stage-auditor.sitelint.com/auditor.bundle.js?tokenId=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e';
