Updated dropdown menus and other changes

--- a/aria-braille-attributes-must-have-a-non-braille-equivalent.html
+++ b/aria-braille-attributes-must-have-a-non-braille-equivalent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aria-braille attributes must have a non-braille equivalent</title>
+    <title>aria braille attributes must have a non-braille equivalent</title>
     <script>
     (function(w,d,s,a,m,t) {
         a = d.createElement(s);m = d.getElementsByTagName(s)[0];a.defer = true;a.fetchpriority='high';a.id = 'auditor_app';a.dataset.cfasync = 'false';a.src = 'https://stage-auditor.sitelint.com/auditor.bundle.js?tokenId=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e';
@@ -143,5 +143,10 @@
         This div uses aria-brailleroledescription without an aria-roledescription.
     </div>
     <p>Note: This is a bad example where elements use aria-braille attributes without corresponding non-braille equivalents.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-braille-attributes-must-have-a-non-braille-equivalent.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
