--- a/aria-role-should-be-appropriate-for-the-element.html
+++ b/aria-role-should-be-appropriate-for-the-element.html
@@ -146,5 +146,10 @@
         <li>This ul is incorrectly assigned a tablist role.</li>
     </ul>
     <p>Note: This is a bad example where elements use inappropriate ARIA role values.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-role-should-be-appropriate-for-the-element.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
