--- a/aside-should-not-be-contained-in-another-landmark.html
+++ b/aside-should-not-be-contained-in-another-landmark.html
@@ -147,5 +147,10 @@
         </div>
     </section>
     <p>Note: This is a bad example where aside elements or elements with role="complementary" are contained within other landmarks.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faside-should-not-be-contained-in-another-landmark.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
