--- a/delayed-refresh-must-not-be-used.html
+++ b/delayed-refresh-must-not-be-used.html
@@ -139,5 +139,10 @@
     <h1>Delayed refresh must not be used</h1>
     
     <p>This page will redirect to another page after 10 seconds due to the http-equiv="refresh" meta tag.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fdelayed-refresh-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
