--- a/elements-should-not-have-tabindex-greater-than-zero.html
+++ b/elements-should-not-have-tabindex-greater-than-zero.html
@@ -138,5 +138,10 @@
     <h1>Elements should not have tabindex greater than zero</h1>
     <p tabindex="5">This paragraph has a tabindex greater than 0, which breaks the accessibility requirement.</p>
     <button tabindex="10">This button also has a tabindex greater than 0.</button>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Felements-should-not-have-tabindex-greater-than-zero.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
