--- a/ensure-elements-marked-as-presentational-are-consistently-ignored.html
+++ b/ensure-elements-marked-as-presentational-are-consistently-ignored.html
@@ -146,5 +146,10 @@
     <h1>Ensure elements marked as presentational are consistently ignored</h1>
     <div role="none" aria-label="This should not have ARIA" tabindex="0" class="focusable">This is a div with role="none" and it is focusable.</div>
     <span role="presentation" aria-hidden="false" tabindex="0" class="focusable">This is a span with role="presentation" and it is focusable.</span>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fensure-elements-marked-as-presentational-are-consistently-ignored.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
