--- a/form-elements-should-have-a-visible-label.html
+++ b/form-elements-should-have-a-visible-label.html
@@ -143,5 +143,10 @@
         <button type="submit">Submit</button>
     </form>
     <p>This document includes input elements that only have a title or aria-describedby attributes, breaking the accessibility requirement for visible labels.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fform-elements-should-have-a-visible-label.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
