--- a/heading-levels-should-only-increase-by-one.html
+++ b/heading-levels-should-only-increase-by-one.html
@@ -143,5 +143,10 @@
     <h4>Skipping again</h4>
     <h6>Another incorrect level</h6>
     <h3>Correct subheading level</h3>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fheading-levels-should-only-increase-by-one.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
