--- a/images-must-have-alternate-text.html
+++ b/images-must-have-alternate-text.html
@@ -143,5 +143,10 @@
     <img src="image4.jpg" alt="Descriptive text">
     <img src="image5.jpg" alt="Duplicate descriptive text">
     <img src="image6.jpg" role="none">
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fimages-must-have-alternate-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
