--- a/page-should-contain-a-level-one-heading.html
+++ b/page-should-contain-a-level-one-heading.html
@@ -43,5 +43,10 @@
         <div role="heading" aria-level="3">This is a heading level 3 but it is not a level-one heading</div>
         <p>Another section without a level-one heading.</p>
     </section>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fpage-should-contain-a-level-one-heading.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
