--- a/required-aria-attributes-must-be-provided.html
+++ b/required-aria-attributes-must-be-provided.html
@@ -143,5 +143,10 @@
         This div has role="checkbox" but is missing required ARIA attributes.
     </div>
     <p>Note: This is a bad example where elements with ARIA roles do not have required ARIA attributes.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Frequired-aria-attributes-must-be-provided.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
