--- a/role-text-should-have-no-focusable-descendants.html
+++ b/role-text-should-have-no-focusable-descendants.html
@@ -148,5 +148,10 @@
     <div role="text">
         This is yet another text role with an <input type="text" placeholder="focusable input">
     </div>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Frole-text-should-have-no-focusable-descendants.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
