--- a/table-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html
+++ b/table-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html
@@ -157,5 +157,10 @@
         </tr>
     </table>
     <p>This document has table cells using the headers attribute that refer to cells in a different table, breaking the accessibility requirement.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Ftable-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
