--- a/users-should-be-able-to-zoom-and-scale-text-up-to-500-percent.html
+++ b/users-should-be-able-to-zoom-and-scale-text-up-to-500-percent.html
@@ -138,5 +138,10 @@
     <h1>Users should be able to zoom and scale the text up to 500%</h1>
     <p>This page is intentionally set to prevent user scaling and zooming beyond 100%.</p>
     <p>It includes <code>user-scalable="no"</code> and <code>maximum-scale=1.0</code> in the viewport meta tag.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fusers-should-be-able-to-zoom-and-scale-text-up-to-500-percent.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
