--- a/accesskey-attribute-value-should-be-unique.html
+++ b/accesskey-attribute-value-should-be-unique.html
@@ -144,5 +144,10 @@
     <button accesskey="b">Contact</button><br>
     <input type="text" accesskey="c" placeholder="Search"><br>
     <textarea accesskey="c" placeholder="Comments"></textarea>
+
+    <p>&nbsp;</p>
+<a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faccesskey-attribute-value-should-be-unique.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+<p>&nbsp;</p>
+
 </body>
 </html>
