--- a/active-area-elements-must-have-alt-text.html
+++ b/active-area-elements-must-have-alt-text.html
@@ -146,5 +146,10 @@
         <!-- Remaining hotspots in image map without alt attributes... -->
     </map>
     <p>Note: This is a bad example where the area elements do not have alternate text.</p>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Factive-area-elements-must-have-alt-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+
 </body>
 </html>
