--- a/all-page-content-should-be-contained-by-landmarks.html
+++ b/all-page-content-should-be-contained-by-landmarks.html
@@ -155,5 +155,10 @@
     <footer role="contentinfo">
         <p>Site Footer</p>
     </footer>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fall-page-content-should-be-contained-by-landmarks.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
