--- a/aria-attributes-must-conform-to-valid-names.html
+++ b/aria-attributes-must-conform-to-valid-names.html
@@ -145,5 +145,10 @@
         Another invalid ARIA attribute name example.
     </div>
     <p>Note: This is a bad example where ARIA attributes do not conform to valid names.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-attributes-must-conform-to-valid-names.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
