--- a/aria-hidden-element-must-not-be-focusable-or-contain-focusable-elements.html
+++ b/aria-hidden-element-must-not-be-focusable-or-contain-focusable-elements.html
@@ -141,5 +141,10 @@
         This div is hidden using aria-hidden="true" but contains a focusable button.
     </div>
     <p>Note: This is a bad example where a hidden element contains a focusable element.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-hidden-element-must-not-be-focusable-or-contain-focusable-elements.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
