--- a/aria-hidden-true-must-not-be-present-on-the-document-body.html
+++ b/aria-hidden-true-must-not-be-present-on-the-document-body.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aria-hidden="true" must not be present on the document body</title>
+    <title>aria hidden="true" must not be present on the document body</title>
     <script>
     (function(w,d,s,a,m,t) {
         a = d.createElement(s);m = d.getElementsByTagName(s)[0];a.defer = true;a.fetchpriority='high';a.id = 'auditor_app';a.dataset.cfasync = 'false';a.src = 'https://stage-auditor.sitelint.com/auditor.bundle.js?tokenId=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e';
@@ -146,5 +146,10 @@
 <body aria-hidden="true">
     <h1>aria-hidden="true" must not be present on the document body</h1>
     <p>This is a bad example where aria-hidden="true" is present on the document body.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-hidden-true-must-not-be-present-on-the-document-body.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
