--- a/aria-toggle-fields-must-have-an-accessible-name.html
+++ b/aria-toggle-fields-must-have-an-accessible-name.html
@@ -139,5 +139,10 @@
     <button role="switch" aria-checked="false"></button>
     <div role="checkbox" aria-checked="true"></div>
     <p>Note: This is a bad example where ARIA toggle fields do not have accessible names.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Faria-toggle-fields-must-have-an-accessible-name.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
