--- a/certain-aria-roles-must-be-contained-by-particular-parents.html
+++ b/certain-aria-roles-must-be-contained-by-particular-parents.html
@@ -145,5 +145,10 @@
         Tab 1
     </div>
     <p>Note: This is a bad example where elements with ARIA roles do not have the required parent roles.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fcertain-aria-roles-must-be-contained-by-particular-parents.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
