--- a/check-that-aria-attributes-are-not-used.html
+++ b/check-that-aria-attributes-are-not-used.html
@@ -143,5 +143,10 @@
         This span uses aria-haspopup, which is not allowed for the progressbar role.
     </span>
     <p>Note: This is a bad example where ARIA attributes are misused based on the element's role.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fcheck-that-aria-attributes-are-not-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
