--- a/contentinfo-landmark-should-not-be-contained-in-another-landmark.html
+++ b/contentinfo-landmark-should-not-be-contained-in-another-landmark.html
@@ -141,5 +141,10 @@
             <p>This footer with role="contentinfo" is incorrectly placed inside a landmark role="main".</p>
         </footer>
     </main>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fcontentinfo-landmark-should-not-be-contained-in-another-landmark.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
