--- a/delayed-refresh-under-20-hours-must-not-be-used.html
+++ b/delayed-refresh-under-20-hours-must-not-be-used.html
@@ -138,5 +138,10 @@
  
     <h1>Delayed refresh under 20 hours must not be used</h1>
     <p>Note: This is a bad example where a meta refresh with a content value of 1 hour (3600 seconds) is used.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fdelayed-refresh-under-20-hours-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
