--- a/deprecated-aria-roles-must-not-be-used.html
+++ b/deprecated-aria-roles-must-not-be-used.html
@@ -143,5 +143,10 @@
         This span uses the deprecated "input" role.
     </span>
     <p>Note: This is a bad example where deprecated ARIA roles are used.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fdeprecated-aria-roles-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
