--- a/document-should-have-one-main-landmark.html
+++ b/document-should-have-one-main-landmark.html
@@ -137,5 +137,10 @@
  
     <h1>Document should have one main landmark</h1>
     <p>This content is not within any landmark region, breaking the accessibility requirement.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fdocument-should-have-one-main-landmark.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
