--- a/elements-must-meet-enhanced-color-contrast-ratio-thresholds.html
+++ b/elements-must-meet-enhanced-color-contrast-ratio-thresholds.html
@@ -160,5 +160,10 @@
     <p>This is some sample text that should have a higher contrast ratio to be accessible according to WCAG 2 AAA standards.</p>
     <button>Click Me</button>
     <button disabled>Disabled Button</button>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Felements-must-meet-enhanced-color-contrast-ratio-thresholds.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
