--- a/elements-must-meet-minimum-color-contrast-ratio-thresholds.html
+++ b/elements-must-meet-minimum-color-contrast-ratio-thresholds.html
@@ -156,5 +156,10 @@
     <button class="disabled-button" disabled>
         <span>Disabled Button Text</span>
     </button>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Felements-must-meet-minimum-color-contrast-ratio-thresholds.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
