--- a/elements-must-only-directly-contain-properly-ordered-and-groups-script-template-or-div-elements.html
+++ b/elements-must-only-directly-contain-properly-ordered-and-groups-script-template-or-div-elements.html
@@ -146,5 +146,10 @@
         <dd>Another definition without term</dd>
     </dl>
     <p>Note: This is a bad example where &lt;dl&gt; elements do not contain properly-ordered &lt;dt&gt; and &lt;dd&gt; groups.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Felements-must-only-directly-contain-properly-ordered-and-groups-script-template-or-div-elements.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
