--- a/form-field-must-not-have-multiple-label-elements.html
+++ b/form-field-must-not-have-multiple-label-elements.html
@@ -142,5 +142,10 @@
         <input type="text" id="username" name="username">
     </form>
     <p>Note: This is a bad example where a form field has multiple labels.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fform-field-must-not-have-multiple-label-elements.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
