--- a/frames-must-have-a-unique-title-attribute.html
+++ b/frames-must-have-a-unique-title-attribute.html
@@ -139,5 +139,10 @@
     <iframe src="https://www.example.com" title=""></iframe>
     <iframe src="https://www.example.com" title="Duplicate title"></iframe>
     <iframe src="https://www.example.com" title="Duplicate title"></iframe>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fframes-must-have-a-unique-title-attribute.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
