--- a/frames-with-focusable-content-must-not-have-tabindex--1.html
+++ b/frames-with-focusable-content-must-not-have-tabindex--1.html
@@ -153,5 +153,10 @@
             <option>Focusable Select</option>
         </select>
     </frame>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fframes-with-focusable-content-must-not-have-tabindex--1.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
