--- a/headings-should-not-be-empty.html
+++ b/headings-should-not-be-empty.html
@@ -142,5 +142,10 @@
     <h4></h4>
     <h5></h5>
     <h6></h6>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fheadings-should-not-be-empty.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
