--- a/html-elements-with-lang-and-xml-lang-must-have-the-same-base-language.html
+++ b/html-elements-with-lang-and-xml-lang-must-have-the-same-base-language.html
@@ -137,5 +137,10 @@
  
     <h1>HTML elements with lang and xml:lang must have the same base language</h1>
     <p>This document has different values for the lang and xml:lang attributes, breaking the accessibility requirement.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fhtml-elements-with-lang-and-xml-lang-must-have-the-same-base-language.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
