--- a/inline-text-spacing-must-be-adjustable-with-custom-stylesheets.html
+++ b/inline-text-spacing-must-be-adjustable-with-custom-stylesheets.html
@@ -146,5 +146,10 @@
     <p class="fixed-spacing">This is an example of text with fixed spacing that cannot be adjusted by custom stylesheets.</p>
     <p class="fixed-spacing">The letter-spacing, line-height, and word-spacing are set with fixed values.</p>
     <p>Note: This is a bad example where inline text spacing is not adjustable.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Finline-text-spacing-must-be-adjustable-with-custom-stylesheets.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
