--- a/input-buttons-must-have-discernible-text.html
+++ b/input-buttons-must-have-discernible-text.html
@@ -140,5 +140,10 @@
     <input type="button">
     <input type="reset">
     <p>Note: This is a bad example where input buttons do not have discernible text.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Finput-buttons-must-have-discernible-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
