--- a/lang-attribute-must-have-a-valid-value.html
+++ b/lang-attribute-must-have-a-valid-value.html
@@ -137,5 +137,10 @@
  
     <h1>lang attribute must have a valid value</h1>
     <p>Note: This is a bad example where the lang attribute does not have a valid value.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Flang-attribute-must-have-a-valid-value.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
