--- a/li-elements-must-be-contained-in-a-ul-or-ol.html
+++ b/li-elements-must-be-contained-in-a-ul-or-ol.html
@@ -140,5 +140,10 @@
     <div>
         <li>This is another incorrectly used list item.</li>
     </div>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fli-elements-must-be-contained-in-a-ul-or-ol.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
