--- a/links-must-be-distinguishable-without-relying-on-color.html
+++ b/links-must-be-distinguishable-without-relying-on-color.html
@@ -156,5 +156,10 @@
         <p>This is a paragraph with some <a href="#">links</a> that are not distinguishable by anything other than color. This fails the accessibility requirement because users who cannot distinguish between the colors cannot easily identify the link.</p>
         <p>Here is another <a href="#">example link</a> within a block of text that lacks sufficient contrast and does not change style on focus or hover.</p>
     </div>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Flinks-must-be-distinguishable-without-relying-on-color.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
