--- a/links-must-have-discernible-text.html
+++ b/links-must-have-discernible-text.html
@@ -140,5 +140,10 @@
     <a href="#"><img src="image.png" alt=""></a>
     <a href="#" aria-label=""></a>
     <p>Note: This is a bad example where links do not have discernible text.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Flinks-must-have-discernible-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
