--- a/links-with-same-name-must-have-a-similar-purpose.html
+++ b/links-with-same-name-must-have-a-similar-purpose.html
@@ -150,5 +150,10 @@
     <a href="https://example.com" aria-label="🔥">🔥</a>
     <a href="https://example.com"><span class="hidden-text">Hidden text</span></a>
     <a href="https://example.com">😊</a>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Flinks-with-same-name-must-have-a-similar-purpose.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
