--- a/more-than-one-main-landmark.html
+++ b/more-than-one-main-landmark.html
@@ -146,5 +146,10 @@
         <h2>Main Content Area 2</h2>
         <p>This is the second main content area of the page.</p>
     </div>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fmore-than-one-main-landmark.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
