--- a/role-img-elements-must-have-an-alternative-text.html
+++ b/role-img-elements-must-have-an-alternative-text.html
@@ -141,5 +141,10 @@
     <span role="img" style="width: 100px; height: 100px; display: inline-block; background: url('image2.jpg');"></span>
     <div role="img" aria-label=""></div>
     <span role="img"></span>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Frole-img-elements-must-have-an-alternative-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
