--- a/server-side-image-maps-must-not-be-used.html
+++ b/server-side-image-maps-must-not-be-used.html
@@ -141,5 +141,10 @@
     <map name="servermap">
         <area shape="rect" coords="34,44,270,350" href="https://example.com" alt="Example">
     </map>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fserver-side-image-maps-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
