--- a/skip-link-target-should-exist-and-be-focusable.html
+++ b/skip-link-target-should-exist-and-be-focusable.html
@@ -165,5 +165,10 @@
         <h2>Main Content</h2>
         <p>This is the main content section, which the skip link should point to.</p>
     </main>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fskip-link-target-should-exist-and-be-focusable.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
