--- a/video-or-audio-elements-must-not-play-automatically.html
+++ b/video-or-audio-elements-must-not-play-automatically.html
@@ -139,5 +139,10 @@
     <audio src="example.mp3" autoplay></audio>
     <video src="example.mp4" autoplay></video>
     <p>Note: This is a bad example where audio and video elements autoplay without user control mechanisms.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fvideo-or-audio-elements-must-not-play-automatically.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
