Updated dropdown menus and other changes

--- a/dt-and-dd-elements-must-be-contained-by-a-dl.html
+++ b/dt-and-dd-elements-must-be-contained-by-a-dl.html
@@ -142,5 +142,10 @@
         <dt>Term 2</dt>
         <dd>Definition 2</dd>
     </div>
-</body>
+
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/dlitem" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
