--- a/object-elements-must-have-alternate-text.html
+++ b/object-elements-must-have-alternate-text.html
@@ -138,5 +138,14 @@
     <h1>object&gt; elements must have alternate text</h1>
     <object data="example.swf" type="application/x-shockwave-flash"></object>
     <p>This document includes an object element without a text alternative, breaking the accessibility requirement.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fobject-elements-must-have-alternate-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/object-alt" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
