--- a/svg-elements-with-an-img-role-must-have-an-alternative-text.html
+++ b/svg-elements-with-an-img-role-must-have-an-alternative-text.html
@@ -142,5 +142,14 @@
     <svg id="example4" role="img"><title> \t\r\n </title></svg> <!-- Title with only whitespace -->
     <svg id="example5" role="img"><title></title><title>Time II: Party</title></svg> <!-- Multiple titles, first is empty -->
     <p>Note: This is a bad example where SVG elements with an img role do not have appropriate alternative text.</p>
-</body>
+
+    <p>&nbsp;</p>
+    <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fsvg-elements-with-an-img-role-must-have-an-alternative-text.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
+    <p>&nbsp;</p>
+    
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/svg-img-alt" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
