--- a/delayed-refresh-under-20-hours-must-not-be-used.html
+++ b/delayed-refresh-under-20-hours-must-not-be-used.html
@@ -143,5 +143,10 @@
     <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fdelayed-refresh-under-20-hours-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
     <p>&nbsp;</p>
     
-    </body>
+
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/meta-refresh" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
