--- a/documents-must-have-title-element-to-aid-in-navigation.html
+++ b/documents-must-have-title-element-to-aid-in-navigation.html
@@ -136,5 +136,10 @@
  
     <h1>Documents must have &lt;title&gt; element to aid in navigation</h1>
     <p>Note: This is a bad example where the document does not have a &lt;title&gt; element in the head.</p>
-</body>
+
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/document-title" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+    </body>
 </html>
