--- a/elements-should-not-have-tabindex-greater-than-zero.html
+++ b/elements-should-not-have-tabindex-greater-than-zero.html
@@ -143,5 +143,10 @@
     <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Felements-should-not-have-tabindex-greater-than-zero.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
     <p>&nbsp;</p>
     
-    </body>
+
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/tabindex" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
