--- a/server-side-image-maps-must-not-be-used.html
+++ b/server-side-image-maps-must-not-be-used.html
@@ -146,5 +146,9 @@
     <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Fserver-side-image-maps-must-not-be-used.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
     <p>&nbsp;</p>
     
-    </body>
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/server-side-image-map" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
