--- a/table-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html
+++ b/table-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html
@@ -162,5 +162,9 @@
     <a href="https://platform-staging.sitelint.site/audits/sites/site/reports?token=e0e568cd35f15dcb5a7b98805e8ef5c447ef519ebcdbbea8a508da215390616e&url=https:%2F%2Fsitelint-testing.github.io%2Faxe-dev-tools%2Ftable-cells-that-use-the-headers-attribute-must-only-refer-to-cells-in-the-same-table.html#tab_failed_reports" target="_blank">View SiteLint Report</a>
     <p>&nbsp;</p>
     
-    </body>
+
+    <p><a href="https://dequeuniversity.com/rules/axe/4.9/td-headers-attr" target="_blank">View axe rule</a></p>
+    <p>&nbsp;</p>
+    
+        </body>
 </html>
