Updated dropdown menus and other changes

--- a/all-touch-targets-must-be-24px-large-or-leave-sufficient-space.html
+++ b/all-touch-targets-must-be-24px-large-or-leave-sufficient-space.html
@@ -8,7 +8,7 @@
         .button-small {
             width: 20px;
             height: 20px;
-            margin: 2px;
+            margin: 0;
             background-color: blue;
             color: white;
             text-align: center;
@@ -135,7 +135,7 @@
     <div class="button-small">1</div>
     <div class="button-small">2</div>
     <div class="button-small">3</div>
-    <p>This document includes touch targets that are smaller than 24px and are too close to each other, breaking the accessibility requirement.</p>
+    <p>This document includes touch targets that are smaller than 24px and are touching each other, breaking the accessibility requirement.</p>
 
     <h2>Correct Example</h2>
     <div class="button-large">A</div>
