--- a/aria-hidden-true-must-not-be-present-on-the-document-body.html
+++ b/aria-hidden-true-must-not-be-present-on-the-document-body.html
@@ -42,13 +42,39 @@
             alert('Pass: aria-hidden="true" is not present on the document body');
         }
     });
+        function navigateToPage() {
+            var select = document.getElementById("page-selector");
+            var selectedValue = select.value;
+
+            if (selectedValue) {
+                if (selectedValue.startsWith("http")) {
+                    // Opens the external link in a new tab
+                    window.open(selectedValue, '_blank');
+                } else {
+                    // Opens internal links in the same tab
+                    location.href = selectedValue;
+                }
+            }
+        }
     </script>
 </head>
 
 <label for="page-selector">Select a Page:</label>
-<select id="page-selector" name="pages" onchange="location = this.value;">
+<select id="page-selector" name="pages" onchange="navigateToPage();">
     <option value="index.html">Choose page</option>
-    <option value="index.html">1. Index</option>
+    <option value="index.html">Choose a page</option>
+    <option value="https://docs.google.com/spreadsheets/d/10l-2BBD04bYrQtaHIk8hfwpSbB9QVkf5PAJd5ARTaQQ/edit?gid=0#gid=0">
+        View the axe Dev Tools Google spreadsheet
+    </option>
+    <option value="https://dequeuniversity.com/rules/axe/html/4.9">
+        View the full list of axe Dev Tools rules
+    </option>
+    <option value="https://sitelint-testing.github.io/every-rule/">
+        Switch to the SiteLint testing suite
+    </option>
+    <option value="https://sitelint-testing.github.io/every-rule/">
+        Switch to the ARC Toolkit testing suite
+    </option>
     <option value="accesskey-attribute-value-should-be-unique.html">2. Accesskey Attribute Value Should Be Unique</option>
     <option value="active-area-elements-must-have-alt-text.html">3. Active Area Elements Must Have Alt Text</option>
     <option value="all-page-content-should-be-contained-by-landmarks.html">4. All Page Content Should Be Contained By Landmarks</option>
